[workspace]
members = ["pyst-lib", "pyst"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"
walkdir = "2.4"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
tower = "0.4"

[workspace.dependencies.assert_cmd]
version = "2.0"

[workspace.dependencies.insta]
version = "1.34"
features = ["json"]

[workspace.dependencies.tempfile]
version = "3.8"

# Python dependencies for the helper scripts
# These will be managed by uv when running the Python helpers