[package]
name = "pyst-lib"
version = "0.1.0"
edition = "2021"
authors = ["Riley Leff <riley@anthropic.com>"]
description = "Core library for pyst, a modern Python script runner"
license = "MIT"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
git2 = "0.19"
url = "2.5"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"